# python-versions-hook

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prospector.yaml  README.md  pyproject.toml
.github/: renovate.json5  requirements.txt
.github/workflows/: main.yaml
python_versions_hook/: __init__.py
tests/: test_tweak_dependency_version.py
tests/test_data/: test_pyproject.toml  test_pyproject_no_project.toml
